<resources>
    <string name="app_name">FinalCatalog</string>
    <string name="creatorText">Creator</string>
    <string name="scoreText">Score</string>
    <string name="titleText">Title</string>
    <string name="appText">Media Catalog</string>
    <string name="gameListText">View Game List</string>
    <string name="showListText">View Show List</string>
    <string name="addShowText">Add Show</string>
    <string name="addGameText">Add Game</string>
    <string name="titleTextBox">Title*:</string>
    <string name="titleInputText" />
    <string name="developerTextBox">Developer:</string>
    <string name="ReviewTextBox">Review:</string>
    <string name="hoursTextBox">Hours Played:</string>
    <string name="scoreTextBox">Score*:</string>
    <string name="addtoListButton">Add Entry</string>
    <string name="directorTextBox">Director:</string>
    <string name="hoursInputText" />
    <string name="scoreInputText" />
    <string name="directorInputText" />
    <string name="episodesTextBox">Number of Episodes:</string>
    <string name="ReviewInputText" />
    <string name="developerInputText" />
    <string name="episodesInputText" />
    <string name="returnButton">Return</string>
    <string name="titlePlate">Title</string>
    <string name="scorePlate">Score</string>
    <string name="outOfText">/100</string>
    <string name="developerPlate">Developer</string>
    <string name="directorPlate">Director</string>
    <string name="timePlayedText">Time Played</string>
    <string name="sortByText">Sort By</string>
    <string name="editGameText">Edit Game</string>
    <string name="deleteGameText">Delete Game</string>
    <string name="editShowText">Edit Show</string>
    <string name="deleteShowText">Delete Show</string>
    <string name="clickItemTo">Click an Item to:</string>
    <string name="episodesPlate">Number of Episodes</string>
</resources>