<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".lists.ShowListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/sortByText"
            android:textColor="@color/nonEditable"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/sortingGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/titleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/titlePlate"
                    android:textColor="@color/nonEditable" />

                <RadioButton
                    android:id="@+id/scoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scorePlate"
                    android:textColor="@color/nonEditable" />

                <RadioButton
                    android:id="@+id/lengthButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/episodesPlate"
                    android:textColor="@color/nonEditable" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/clickItemTo"
                android:textColor="@color/nonEditable"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/editShowText"
                    android:textAllCaps="false"
                    android:textColor="@color/nonEditable" />

                <Button
                    android:id="@+id/delShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/deleteShowText"
                    android:textAllCaps="false"
                    android:textColor="@color/nonEditable" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#A49EAE"
            android:padding="15dp">

            <TextView
                android:id="@+id/titlePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/titlePlate" />

            <TextView
                android:id="@+id/scorePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scorePlate" />

            <TextView
                android:id="@+id/directorPlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/directorPlate" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/showFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>