<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.umsl.tyler.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Media\nCatalog"
        android:textColor="#083353"
        android:textSize="40sp"
        android:gravity="top|center"
        android:paddingBottom="60dp"
        android:background="@drawable/main_set"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/viewGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameListText"
            android:textColor="@color/nonEditable"
            android:textAllCaps="false"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/viewShows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showListText"
            android:textColor="@color/nonEditable"
            android:textAllCaps="false"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

    <Button
        android:id="@+id/addGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addGameText"
        android:textColor="@color/nonEditable"
        android:textAllCaps="false"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/addShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addShowText"
        android:textColor="@color/nonEditable"
        android:textAllCaps="false"
        android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>