<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/entry"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/titleBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/titleText"
            android:textColor="@color/text"
            android:ems="10"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:text="@string/scoreText"
            android:textColor="@color/text"
            android:ems="4"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/creatorBoxID"
            app:layout_constraintStart_toEndOf="@id/titleBoxID"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/creatorBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="5dp"
            android:text="@string/creatorText"
            android:textColor="@color/text"
            android:ems="8"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>